# technomatic-2105

./: .gitignore  .index.html.un~  CHANGELOG.md  LICENSE  NOTICE  PRIVACY.md  README.md  index.html  index.html~  settings.gradle
.github/workflows/: android-ci.yml  android-release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  MusicEngine.cpp  MusicEngine.h  native-lib.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_radio_breaker.xml
app/src/main/res/values/: strings.xml  styles.xml
docs/: FDROID.md  RELEASE.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  13.txt  14.txt  18.txt  19.txt  24.txt  25.txt  27.txt  29.txt  30.txt  6.txt  8.txt
fdroid/metadata/: vip.thatiam.radiobreaker.yml  vip.thatiam.technomatic2105.yml
technomatic_2105/: CHANGELOG.md  LICENSE  NOTICE  README.md  settings.gradle
technomatic_2105/.github/workflows/: android-ci.yml
technomatic_2105/app/: build.gradle
technomatic_2105/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  MusicEngine.cpp  MusicEngine.h  native-lib.cpp
technomatic_2105/docs/: FDROID.md  RELEASE.md
technomatic_2105/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
technomatic_2105/fdroid/metadata/: vip.thatiam.technomatic2105.yml
technomatic_2105/tools/: render_preview.cpp
tools/: export_pcm_test.cpp  render_preview.cpp
(+26 files in other folders)
